sample-deployment-deployed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-03-28T07:59:16Z"
  generation: 1
  name: sample-deployment
  namespace: test-ns
  resourceVersion: "8154034"
  uid: f3454015-3eca-412f-9ea9-05e9103d623a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sample-selector
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sample-selector
    spec:
      containers:
      - image: ubuntu:20.04
        imagePullPolicy: IfNotPresent
        name: sample-container
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2022-03-28T07:59:16Z"
    lastUpdateTime: "2022-03-28T07:59:16Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2022-03-28T07:59:16Z"
    lastUpdateTime: "2022-03-28T07:59:16Z"
    message: ReplicaSet "sample-deployment-68c75f5f48" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
