sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-selector
  template:
    metadata:
      labels:
        app: sample-selector
    spec:
      containers:
      - name: sample-container
        image: ubuntu:20.04
        ports:
        - containerPort: 80
